# spaceY-rocket-control-cli

./: CMakeLists.txt
include/: param.h
src/: main.cpp
